# glad2-prebuilt

./: CMakeLists.txt  README.md  local-build.cmd
.github/workflows/: build-win.yml
